Update and rename nononono/89221-sophies-curse/eng.textile to nononono/89221-sophies-curse/f/eng.textile

--- a/nononono/89221-sophies-curse/f/eng.textile
+++ b/nononono/89221-sophies-curse/f/eng.textile
@@ -6,15 +6,25 @@ Author: nononono
 
 Sophie Hisgrove anxiously glanced at the clock: 12:53. Still seven minutes to go. Seven minutes till freedom, until her time at university would be over. After the seemingly endless days at the library, nights brushing up on the Ottoman Empire instead of going to the pub, she was ready to reap the rewards of her hard work. Very soon, she'd be several pints deep in the beer garden at The Sheep and Tiger, making up for a month of exam induced abstinence. But first there was something very pressing she had to attend to. Trying to distract herself from her very full bladder, she glanced round the room. Her best mate Jasmyn's eyes had practically rolled back into her head, and Sophie knew exactly what was happening.
 
-@@An explanation is necessary at this point. Sophie's world on the face of it looks a lot like the Planet Earth that you and I are familiar with. It's still 2023, there's still a Leeds University, and people aren't using jetpacks to get to Tesco. But unlike the world we know, everyone is born with a randomly allocated special power of some sort. A lucky few had powers that made their everyday life extremely comfortable, but most people's powers were fairly innocuous and made very little difference to their everyday lives. Sophie's dad, for example, had the power to cook ingredients perfectly using his mind, and owned one of the most exclusive restaurants in London as a result. Sophie's sister, on the other hand, had the power to sharpen pencils using her mind. A useful power, but hardly one that was going to change lives. It was Jasmyn's power that Sophie was very, very jealous of at this moment in time. When Jasmyn's bladder was full enough, she is able to transfer her urine elsewhere. In other words, she could urinate freely without getting her clothes dirty. Usually, she'd just divert her pee into a nearby river or stream, but occasionally, she had been known to send it to other people's bladders instead. She normally only did it to people that have pissed her off. Once, she accidentally transferred her piss into Sophie's bladder when they were both drunk and bursting for a wee in the queue for Popworld in fresher's week, an action which led Sophie to wet herself in front of most of her new course mates. Once again, Sophie was reaching breaking point, and was praying for the end of the exam so she could go and relieve herself.
+An explanation is necessary at this point. Sophie's world on the face of it looks a lot like the Planet Earth that you and I are familiar with. It's still 2023, there's still a Leeds University, and people aren't using jetpacks to get to Tesco. But unlike the world we know, everyone is born with a randomly allocated special power of some sort. A lucky few had powers that made their everyday life extremely comfortable, but most people's powers were fairly innocuous and made very little difference to their everyday lives. Sophie's dad, for example, had the power to cook ingredients perfectly using his mind, and owned one of the most exclusive restaurants in London as a result. Sophie's sister, on the other hand, had the power to sharpen pencils using her mind. A useful power, but hardly one that was going to change lives. 
 
-@@Finally, the invigilator announced the end of the exam. Sophie had already undone the top button of her jeans, such was her desperation. Fortunately for her, Jasmyn had managed to send her pee somewhere else this time, otherwise she would have 100% wet herself. She wasn't even sure she'd make it to the toilet at this point. Her fist was dug deep into her crotch at this point, physically shaking as she waited for the invigilator to pick up her paper. She glanced desperately at the hordes of people already leaving the exam hall. There was no way she'd be able to wait in line. Her bladder, sensing defeat, allowed a drop of urine to escape into Sophie's panties. Almost on the verge of tears, Sophie silently cursed herself. She had time to pee before the exam, but had stupidly decided to spend the last few minutes cramming revision instead. And now all the coffee and water consumed was coming back with a vengeance, filling her bladder to the point of near-explosion. The second the invigilator had her paper, Sophie was up, clutching herself, whilst simultaneously pulling up her jeans. The urine sloshed uncomfortably as she left the hall as fast as she could, moaning as another spurt leaked out. She briefly assessed the queue for the ladies, but the sea of desperate woman dancing frantically stretched across the corridor and beyond. Sophie knew that simply wasn't an option. She'd only just shaken off the Sophie Piss-grove nickname, and she was not prepared to embarrass herself like that. For Sophie, wetting herself was now an inevitability. It was just a case of damage limitation.
+It was Jasmyn's power that Sophie was very, very jealous of at this moment in time. When Jasmyn's bladder was full enough, she is able to transfer her urine elsewhere. In other words, she could urinate freely without getting her clothes dirty. Usually, she'd just divert her pee into a nearby river or stream, but occasionally, she had been known to send it to other people's bladders instead. She normally only did it to people that have pissed her off. Once, she accidentally transferred her piss into Sophie's bladder when they were both drunk and bursting for a wee in the queue for Popworld in fresher's week, an action which led Sophie to wet herself in front of most of her new course mates. Once again, Sophie was reaching breaking point, and was praying for the end of the exam so she could go and relieve herself.
 
-@@As she hobbled up the stairs, Sophie's mind was on finding somewhere where she could discretely wet herself, then make an excuse to head home, change, and come back ready to party. What she hasn't banked on was a first stroke of good luck that day: on the right at the top of the stairs was a vacant toilet. That joy was very short-lived, as speeding frantically past her came Francesca Alcaraz. Not much was known about Francesca. She was incredibly beautiful, with long black hair and immaculately maintained lightly tanned skin. This plus her mysterious aura meant that many at the university fancied her. But the few people brave enough to try and ask her out on a date were shot down instantly, with just a long and withering stare. Very few people had heard her talk, yet she somehow seemed to get top marks in every exam. She lived a life of solitude, and was normally found in Booth K on the 3rd floor of the university library, normally dressed head to toe in black, and always looking completely unapproachable. A rumour went round in second year that she spent an entire week in that booth without drinking, eating or peeing. With that in mind, it was strangely humanising to see Francesca running past her, clearly in dire need of relief. But Sophie knew time was against her, as she felt another dribble of wee run down her leg. Francesca darted into the bathroom, too desperate to shut the door.
+Finally, the invigilator announced the end of the exam. Sophie had already undone the top button of her jeans, such was her desperation. Fortunately for her, Jasmyn had managed to send her pee somewhere else this time, otherwise she would have 100% wet herself. She wasn't even sure she'd make it to the toilet at this point. Her fist was dug deep into her crotch at this point, physically shaking as she waited for the invigilator to pick up her paper. She glanced desperately at the hordes of people already leaving the exam hall. There was no way she'd be able to wait in line. Her bladder, sensing defeat, allowed a drop of urine to escape into Sophie's panties. Almost on the verge of tears, Sophie silently cursed herself. She had time to pee before the exam, but had stupidly decided to spend the last few minutes cramming revision instead. 
 
-@@"PAUSE," Sophie shouted, her gaze fixated on Francesca, who had already started pulling her knickers down. Sophie rarely made use of her special power, the ability to freeze another person for one minute, but she had no other option. Rushing into the loo, she practically ripped her jeans and panties off. The second her bum made contact with the seat, her desperately, desperately, full bladder finally relaxed. The feeling was indescribable, better than any sex she'd ever had. As urine cascaded out of her exhausted peehole, she couldn't help but feel bad for Francesca, frozen in time right in front of the toilet. Very soon, she would unfreeze, and realise the toilet she was so close to was now unavailable. But Sophie's bladder had clouded her moral judgement, and she found it difficult to care about anything besides the intense feeling of utter relief. A minute passed, and Francesca reanimated, confused and on the brink of exploding. She shrieked as her bladder gave up. A gush of urine leaked out of Francesca, before steadying to a strong stream, dampening her knickers which halfway round her ankles at this point. Still dazed by the situation, Francesca tried to hold herself, clutching her pussy through her black skirt, but she was past the point of no return. Sophie finally stopped urinating, but Francesca's stream went on and on and on, flooding the floor of the toilet. She had given up trying to stop the stream, and instead, glared intensely at Sophie, as her bladder emptied itself involuntarily. Sophie wiped herself, keen to avoid eye contact, pulled her pants and jeans up, and flushed.
+And now all the coffee and water consumed was coming back with a vengeance, filling her bladder to the point of near-explosion. The second the invigilator had her paper, Sophie was up, clutching herself, whilst simultaneously pulling up her jeans. The urine sloshed uncomfortably as she left the hall as fast as she could, moaning as another spurt leaked out. She briefly assessed the queue for the ladies, but the sea of desperate woman dancing frantically stretched across the corridor and beyond. Sophie knew that simply wasn't an option. She'd only just shaken off the Sophie Piss-grove nickname, and she was not prepared to embarrass herself like that. For Sophie, wetting herself was now an inevitability. It was just a case of damage limitation.
 
-@@"Francesca I'm so sorry, I don't know what came over me," Sophie mumbled, shame taking over the high of relief. Francesca said nothing. "I only live a short walk away, you can come and shower and borrow some of my clothes if you like?" Francesca continued to glare at Sophie, who was now washing her hands. Francesca started whispering, intensely and angrily. "I'm sorry?" Sophie asked, fed up by the interaction. Francesca's volume crescendoed gradually to a scream of unintelligible words. Sophie wasn't renowned for her linguistic ability but she'd never heard the language that Francesca was shouting. It was almost mesmerising, her words had a chant like quality to them. It was also deeply terrifying, and Sophie no longer wanted to invite her into her flat. "Okay never mind then... sorry," she meekly replied, sheepishly leaving a piss-drenched Francesca chanting in the bathroom. Sophie pulled her phone out, and opened up WhatsApp: "Hey, got held up soz. I'll meet you outside. Got an unbelievable story for you..."
+As she hobbled up the stairs, Sophie's mind was on finding somewhere where she could discretely wet herself, then make an excuse to head home, change, and come back ready to party. What she hasn't banked on was a first stroke of good luck that day: on the right at the top of the stairs was a vacant toilet. That joy was very short-lived, as speeding frantically past her came Francesca Alcaraz. Not much was known about Francesca. She was incredibly beautiful, with long black hair and immaculately maintained lightly tanned skin. This plus her mysterious aura meant that many at the university fancied her. 
+
+But the few people brave enough to try and ask her out on a date were shot down instantly, with just a long and withering stare. Very few people had heard her talk, yet she somehow seemed to get top marks in every exam. She lived a life of solitude, and was normally found in Booth K on the 3rd floor of the university library, normally dressed head to toe in black, and always looking completely unapproachable. A rumour went round in second year that she spent an entire week in that booth without drinking, eating or peeing. With that in mind, it was strangely humanising to see Francesca running past her, clearly in dire need of relief. But Sophie knew time was against her, as she felt another dribble of wee run down her leg. Francesca darted into the bathroom, too desperate to shut the door.
+
+"PAUSE," Sophie shouted, her gaze fixated on Francesca, who had already started pulling her knickers down. Sophie rarely made use of her special power, the ability to freeze another person for one minute, but she had no other option. Rushing into the loo, she practically ripped her jeans and panties off. The second her bum made contact with the seat, her desperately, desperately, full bladder finally relaxed. The feeling was indescribable, better than any sex she'd ever had. As urine cascaded out of her exhausted peehole, she couldn't help but feel bad for Francesca, frozen in time right in front of the toilet. Very soon, she would unfreeze, and realise the toilet she was so close to was now unavailable. But Sophie's bladder had clouded her moral judgement, and she found it difficult to care about anything besides the intense feeling of utter relief.
+
+A minute passed, and Francesca reanimated, confused and on the brink of exploding. She shrieked as her bladder gave up. A gush of urine leaked out of Francesca, before steadying to a strong stream, dampening her knickers which halfway round her ankles at this point. Still dazed by the situation, Francesca tried to hold herself, clutching her pussy through her black skirt, but she was past the point of no return. Sophie finally stopped urinating, but Francesca's stream went on and on and on, flooding the floor of the toilet. She had given up trying to stop the stream, and instead, glared intensely at Sophie, as her bladder emptied itself involuntarily. Sophie wiped herself, keen to avoid eye contact, pulled her pants and jeans up, and flushed.
+
+"Francesca I'm so sorry, I don't know what came over me," Sophie mumbled, shame taking over the high of relief. Francesca said nothing. "I only live a short walk away, you can come and shower and borrow some of my clothes if you like?" Francesca continued to glare at Sophie, who was now washing her hands. Francesca started whispering, intensely and angrily. "I'm sorry?" Sophie asked, fed up by the interaction. Francesca's volume crescendoed gradually to a scream of unintelligible words. 
+
+Sophie wasn't renowned for her linguistic ability but she'd never heard the language that Francesca was shouting. It was almost mesmerising, her words had a chant like quality to them. It was also deeply terrifying, and Sophie no longer wanted to invite her into her flat. "Okay never mind then... sorry," she meekly replied, sheepishly leaving a piss-drenched Francesca chanting in the bathroom. Sophie pulled her phone out, and opened up WhatsApp: "Hey, got held up soz. I'll meet you outside. Got an unbelievable story for you..."
 
 *002*2023-05-21 12:18
 
@@ -86,17 +96,23 @@ Sophie mumbled a thank you, then dashed upstairs, praying that whatever was goin
 
 *006*2023-05-27 12:27
 
-@@Sophie jolted upright, head and bladder throbbing. She checked her phone: 7:28am. Classic, she thought. First chance for a lie in and my stupid bladder wakes me up. It explained her dream at least. She'd dreamt that every time she tried to use the toilet, she'd be transported somewhere else, gradually getting more and more desperate. Speaking of, Sophie was fit to burst. She reluctantly tore herself away from the warm comfort of her duvet, feeling the cool morning air on her naked body as she stood up. She debated putting some clothes on, but her bladder was in no mood to be delayed, and besides, her flatmates would probably all be asleep anyway. Sophie always needed a wee when she woke up, but this was next level. It almost felt as though she forgot to urinate when she came home from the pub. Which was a possibility, as she had had a substantial amount of beer by the time she decided to go home. Peeking her head out of her bedroom door, she saw the coast was clear, so she darted across the hallway, clutching herself desperately as what felt like litres of urine begged for release.
+Sophie jolted upright, head and bladder throbbing. She checked her phone: 7:28am. Classic, she thought. First chance for a lie in and my stupid bladder wakes me up. It explained her dream at least. She'd dreamt that every time she tried to use the toilet, she'd be transported somewhere else, gradually getting more and more desperate. Speaking of, Sophie was fit to burst. She reluctantly tore herself away from the warm comfort of her duvet, feeling the cool morning air on her naked body as she stood up. She debated putting some clothes on, but her bladder was in no mood to be delayed, and besides, her flatmates would probably all be asleep anyway. 
+
+Sophie always needed a wee when she woke up, but this was next level. It almost felt as though she forgot to urinate when she came home from the pub. Which was a possibility, as she had had a substantial amount of beer by the time she decided to go home. Peeking her head out of her bedroom door, she saw the coast was clear, so she darted across the hallway, clutching herself desperately as what felt like litres of urine begged for release.
 
 ###
 
-@@FUCKKKKKKKK. It all came back to Sophie instantly. It wasn't a dream at all, but a very real reality. In truth, she didn't really remember anything that clearly from yesterday, but the pieces of the story were starting to come together in her mind. She remembered pissing in her sister's sink, and then having to try and explain what was going on. She remembered having to pee in an empty Starbucks cup when her sister gave her a lift back to Leeds and they got stuck in traffic. She remembered trying to still enjoy the evening at the pub but spending most of the time so desperate for the loo she could barely talk. And she remembered wetting herself on the top floor of the 78 bus because she couldn't hold on any longer. Sophie assessed her surroundings, her stomach twisting as she realised where she was. It was all the same as it was when she left without saying goodbye three years ago, from the tacky 'Live Laugh Love' sign in the hallway, to the ugly green carpet. She was at the house of her ex-boyfriend's parents, naked, with a bladder on the verge of exploding. She desperately clutched her peehole as a spurt leaked out, the drops softly pattering on the outdated carpet. Twisting her body in agony, she silently gasped as she heard a voice from upstairs.
+FUCKKKKKKKK. It all came back to Sophie instantly. It wasn't a dream at all, but a very real reality. In truth, she didn't really remember anything that clearly from yesterday, but the pieces of the story were starting to come together in her mind. She remembered pissing in her sister's sink, and then having to try and explain what was going on. She remembered having to pee in an empty Starbucks cup when her sister gave her a lift back to Leeds and they got stuck in traffic. She remembered trying to still enjoy the evening at the pub but spending most of the time so desperate for the loo she could barely talk. And she remembered wetting herself on the top floor of the 78 bus because she couldn't hold on any longer.
+
+Sophie assessed her surroundings, her stomach twisting as she realised where she was. It was all the same as it was when she left without saying goodbye three years ago, from the tacky 'Live Laugh Love' sign in the hallway, to the ugly green carpet. She was at the house of her ex-boyfriend's parents, naked, with a bladder on the verge of exploding. She desperately clutched her peehole as a spurt leaked out, the drops softly pattering on the outdated carpet. Twisting her body in agony, she silently gasped as she heard a voice from upstairs.
 
 "Who's down there?" her ex's gruff father called out. Sophie's heart rate spiked, as her bladder started to reach bursting point. The stair floorboards creaked, as his father began to make his way downstairs, so Sophie did the only thing she could think to do, and freeze him. With one minute before he unfroze, and potentially called the police, Sophie knew she had to act quickly, but she was beyond desperate for a wee at this point, and her bladder was causing her physical pain. Searching frantically, for a receptacle to relieve herself in, her eyes were drawn to the flowerpot by the front door. Holding on for dear life, she grabbed the flowerpot, only to find it was significantly heavier than she had first realised. As another spurt leaked out, and with time running out, Sophie had no choice but to see where the bathroom door would take her this time.
 
 ###
 
-@@She was in the charity shop where she sometimes volunteered, still completely naked, and still absolutely bursting for a wee. The shop's alarm started blaring almost immediately, as no one was due to open up until 9pm. The one time Phyllis remembers to set the alarm, Sophie wryly thought. She could hold on no longer. Her bladder gave up the ghost, violently releasing its contents onto the floor of the shop, amid the deafening sound of the burglar alarm. Sophie moaned as a small waterfall left her body, with no thought about how she was going to explain the puddle on the floor to her boss. Or how she was going to explain being naked. Or how she was going to explain setting off the burglar alarm. The relief was so great she almost wanted to cry, with the stream showing no sign of stopping. After what felt like almost two minutes, her bladder was empty, and she could turn her mind to the situation. Keen to get out as quickly as possible, she grabbed a pair of light denim flared jeans, an oversized t shirt and some scuffed white trainers. She disabled the alarm, and went to get some cleaning stuff. Shit, she thought. All the cleaning stuff is in the bathroom. Not wishing to find herself on the doorstep of anymore of her exes, she decided to improvise, using some old jumpers to clean up the mess. Praying no one would notice the loss of some old jumpers, or the light smell of urine mixed with the cheap perfume she'd poured over it to try and hide the smell, she disposed of the jumpers, and let herself out, making sure to reset the burglar alarm, and lock up again. Hopefully no one would ever find out. Hopefully.
+She was in the charity shop where she sometimes volunteered, still completely naked, and still absolutely bursting for a wee. The shop's alarm started blaring almost immediately, as no one was due to open up until 9pm. The one time Phyllis remembers to set the alarm, Sophie wryly thought. She could hold on no longer. Her bladder gave up the ghost, violently releasing its contents onto the floor of the shop, amid the deafening sound of the burglar alarm. Sophie moaned as a small waterfall left her body, with no thought about how she was going to explain the puddle on the floor to her boss. Or how she was going to explain being naked. Or how she was going to explain setting off the burglar alarm. The relief was so great she almost wanted to cry, with the stream showing no sign of stopping. 
+
+After what felt like almost two minutes, her bladder was empty, and she could turn her mind to the situation. Keen to get out as quickly as possible, she grabbed a pair of light denim flared jeans, an oversized t shirt and some scuffed white trainers. She disabled the alarm, and went to get some cleaning stuff. Shit, she thought. All the cleaning stuff is in the bathroom. Not wishing to find herself on the doorstep of anymore of her exes, she decided to improvise, using some old jumpers to clean up the mess. Praying no one would notice the loss of some old jumpers, or the light smell of urine mixed with the cheap perfume she'd poured over it to try and hide the smell, she disposed of the jumpers, and let herself out, making sure to reset the burglar alarm, and lock up again. Hopefully no one would ever find out. Hopefully.
 
 *007*2023-07-11 14:41
 
