Update and rename rus.textile to rus.textile

--- a/nyonoyo/96813-holomess-un-gama-tetris/f-x/rus.textile
+++ b/nyonoyo/96813-holomess-un-gama-tetris/f-x/rus.textile
@@ -1,4 +1,4 @@
-HoloMess ~Ун-Гама Тетрис~
+HoloMess (Ун-Гама Тетрис)
 
 Автор: nyonoyo
 
@@ -99,4 +99,5 @@ HoloMess ~Ун-Гама Тетрис~
 «О боже мой, это было так мило!» — вмешался Тамаки, испортив момент. «Но поскольку все мы сейчас сидим в одиночестве, я не думаю, что могу назвать эту игру иначе, как ничьей. И так просто не пойдёт, не так ли, ребята?» Тамаки наблюдал, как его чат соглашался с ним, сообщения перемещались по экрану с рекордной скоростью. «Думаю, нам просто придётся сделать это снова на следующей неделе! Девочки, вы спустились? Двое друзей секунду смотрели на свои экраны, прежде чем каждый широко улыбнулся.
 
 «Ага».
+
 
