Update and rename rus.textile to rus.textile

--- a/nyonoyo/104700-holomess-extra-not-as-big-as-they-thought/f-x/rus.textile
+++ b/nyonoyo/104700-holomess-extra-not-as-big-as-they-thought/f-x/rus.textile
@@ -1,4 +1,4 @@
-Голографический беспорядок ~Не такой большой, как они думали~
+Голографический беспорядок (Не такой большой, как они думали)
 
 Автор: nyonoyo
 
@@ -171,4 +171,5 @@
 Девочки визжали, когда их выталкивали из автобуса, едва успев схватить свои вещи перед выходом из автобуса, их грязные подгузники были выставлены напоказ. Не зная, что делать, девочки бросились в разные стороны, чтобы попытаться добраться до своих комнат, не будучи замеченными.
 
 Как только девочки каким-то образом добрались до комнат, они сделали уборку и переодевание приоритетом. По мере того, как дни шли, всё снова казалось нормальным. Весь остальной персонал и таланты уже знали о событиях, которые произошли в тот день, но они намеренно никогда не упоминали об этом, довольные тем, что девочки усвоили свои уроки. Больше никто из невысоких идолов не задавал вопросов и не отказывался от персонала, особенно Нодока. Когда пришло время уходить, девочки были недовольны, обнаружив, что на их автокреслах теперь осталось постоянное жёлтое пятно, но поняли, что его, вероятно, оставили намеренно, как напоминание об их незрелости. Одна за другой девушки сели на свои места, готовые доказать свою зрелость, несмотря на рост, уже поняв, что они не такие уж большие, как думали.
+
 
