Update and rename eng.textile to eng.textile

--- a/nyonoyo/101197-holomess-banpire/f-x/eng.textile
+++ b/nyonoyo/101197-holomess-banpire/f-x/eng.textile
@@ -1,4 +1,4 @@
-HoloMess ~BANpire~
+HoloMess (BANpire)
 
 Author: nyonoyo
 
@@ -65,4 +65,5 @@ The next morning, Mel slowly regained consciousness, her bare chest and face sli
 “Video removed: Terms of Use violation”
 
 “Thank god…,” Mel fell back on her butt with another splat. Somehow, likely through the efforts of her manager, only the video was gone and her channel was saved from termination. No doubt she would hear an earful from everyone later, but for the time being she could be at peace. Reassessing her situation, Mel bit her lip, a blush forming as she released her bladder into her soiled shorts. She cooed as the urine warmed her in more ways than one and gently rocked herself back and forth against the floor. “My viewers really are a bunch of perverts…”
+
 
