Update and rename rus.textile to rus.textile

--- a/nyonoyo/101197-holomess-banpire/f-x/rus.textile
+++ b/nyonoyo/101197-holomess-banpire/f-x/rus.textile
@@ -1,4 +1,4 @@
-Голографический беспорядок ~BANpire~
+Голографический беспорядок (BANpire)
 
 Автор: nyonoyo
 
@@ -65,4 +65,5 @@
 «Видео удалено: нарушение условий использования»
 
 «Слава богу…», Мел упала на попу с ещё одним шлепком. Каким-то образом, вероятно, благодаря усилиям её менеджера, исчезло только видео, и её канал был спасён от удаления. Несомненно, позже она выслушает нагоняй от всех, но пока она может быть спокойна. Переоценив своё положение, Мел закусила губу, румянец выступил, когда она опорожнила мочевой пузырь в свои грязные шорты. Она ворковала, когда моча согревала её во многих отношениях, и нежно покачивалась взад-вперёд по полу. «Мои зрители — настоящие извращенцы…»
+
 
