Update and rename rus.textile to rus.textile

--- a/nononono/113783-the-trapped-lady/f-s/rus.textile
+++ b/nononono/113783-the-trapped-lady/f-s/rus.textile
@@ -1,12 +1,10 @@
-«Леди в ловушке»
+Леди в ловушке
 
 Автор: nononono
 
 *000*2025-07-03 18:30
 
-Я
-
-«Эз, пожалуйста, остановись, я сейчас обмочусь», — простонала Энни, ремень безопасности яростно впивался в её раздувшийся мочевой пузырь.
+«Эз! Пожалуйста, остановись, я сейчас обмочусь», — простонала Энни, ремень безопасности яростно впивался в её раздувшийся мочевой пузырь.
 
 «Ладно-ладно, мне тоже ужасно хочется в туалет», — призналась Эз после четырёх часов езды без остановок и с обилием воды.
 
