--- a/Nar/58514-a-policewomans-lot/rus.textile
+++ b/Nar/58514-a-policewomans-lot/rus.textile
@@ -1,4 +1,4 @@
-Удел женщины-полицейского
+Удел женщины-полицейской
 
 Автор: Нар
 
@@ -26,7 +26,7 @@
 
 Прежде чем Эллисон успела ответить ещё раз, её радио затрещало, и голос старшего суперинтенданта Мэддокса произнёс: «Команда три. Что-нибудь происходит?»
 
-«О да, сэр, — сказала Эллисон, прежде чем нажать кнопку передачи, — я сломаю себе шею, чтобы попис*ть, а П.С. Галлахер мне поможет, как шоколадная дубинка». Нажав кнопку, она объявила настолько спокойным голосом, насколько могла: «Отрицательно. Всё тихо».
+«О да, сэр, — сказала Эллисон, прежде чем нажать кнопку передачи, — я сломаю себе шею, чтобы пописить, а П.С. Галлахер мне поможет, как шоколадная дубинка». Нажав кнопку, она объявила настолько спокойным голосом, насколько могла: «Отрицательно. Всё тихо».
 
 «Понятно», — быстро ответил Мэддокс. «Держать свою позицию».
 
@@ -56,7 +56,7 @@
 
 Они замолчали, и через минуту Эллисон снова начала осматривать улицу, высматривая, не пропустила ли она что-нибудь. Всё, что ей было нужно, это какое-нибудь укромное место, где можно было бы спрятаться, чтобы она могла поднять юбку и облегчить боль в мочевом пузыре.
 
-Дома, выходящие на противоположную сторону улицы, не имели садов с кустарниками или деревьями или какого-либо укрытия, а высокая стена, проходящая по всей длине дороги с этой стороны и окружающая городскую больницу, исключала возможность перехода сюда. . Рядом даже не было припаркованных машин. Короче говоря, ей было совершенно некуда попис*ть.
+Дома, выходящие на противоположную сторону улицы, не имели садов с кустарниками или деревьями или какого-либо укрытия, а высокая стена, проходящая по всей длине дороги с этой стороны и окружающая городскую больницу, исключала возможность перехода сюда. . Рядом даже не было припаркованных машин. Короче говоря, ей было совершенно некуда пописить.
 
 Единственная возможность заключалась по другую сторону сетчатого забора, отделяющего границу промышленной зоны, и, в частности, склада, за которым они наблюдали. Проблема заключалась в том, что забор был высотой десять футов, и если бы она перелезла через него и кто-нибудь, выглянувший из заднего окна склада, увидел бы её, операция была бы сорвана. Более того, если Мэддокс поймает её за пределами станции, её карьера будет закончена. Это был не первый раз, когда во время операции её застали с полным мочевым пузырём.
 
@@ -128,7 +128,7 @@
 
 Как только он скрылся из виду, Эллисон начала неистово танцевать, перепрыгивая с ноги на ногу и постукивая каблуками по бетону. Боже, ей ужасно хотелось в туалет, и теперь она не могла даже дотянуться до юбки, не говоря уже о том, чтобы стянуть нижнее бельё.
 
-«Ой ой ой!» — повторяла она снова и снова, изо всех сил пытаясь отсрочить неизбежное. Вдалеке кричали голоса, но ни один из них не был достаточно близко, чтобы она могла позвать на помощь. Немного потянув, она обнаружила, что может дотянуться до радио. Она собиралась нажать кнопку передачи, но остановилась, гадая, что она собирается сказать. Офицеру нужна помощь. Придёшь и вытащишь меня из наручников, потому что я собираюсь обссаться в штаны? Даже мысль об этом заставила её покраснеть. Нет, она просто не могла позвать на помощь. Ей придётся просто ждать и надеяться, что Галлахер придёт её искать. Было бы достаточно неловко иметь с ним дело, но, по крайней мере, он уже знал, что ей очень хотелось попис*ть.
+«Ой ой ой!» — повторяла она снова и снова, изо всех сил пытаясь отсрочить неизбежное. Вдалеке кричали голоса, но ни один из них не был достаточно близко, чтобы она могла позвать на помощь. Немного потянув, она обнаружила, что может дотянуться до радио. Она собиралась нажать кнопку передачи, но остановилась, гадая, что она собирается сказать. Офицеру нужна помощь. Придёшь и вытащишь меня из наручников, потому что я собираюсь обссаться в штаны? Даже мысль об этом заставила её покраснеть. Нет, она просто не могла позвать на помощь. Ей придётся просто ждать и надеяться, что Галлахер придёт её искать. Было бы достаточно неловко иметь с ним дело, но, по крайней мере, он уже знал, что ей очень хотелось пописить.
 
 Эллисон попыталась спустить цепь наручников вниз по столбу, но она зацепилась за кронштейн, крепивший её к сетчатому забору, в результате чего она не смогла опустить руки ниже уровня талии. Она ничего не могла поделать со своей одеждой. Если Галлахер не придёт искать её в ближайшее время, ей придётся обмочиться, а если кто-нибудь другой найдёт её первым, она никогда не смирится с этим.
 
@@ -188,7 +188,7 @@
 
 — Спасти её? — сказал Мэддокс язвительным тоном. — О чём, чёрт возьми, ты говоришь, чувак?
 
-Когда он приблизился к позиции Эллисон, он увидел её прямо в луче фонаря. Он остановился в нескольких ярдах от того места, где она стояла, пытаясь не позволить отчаянию попис*ть, заставив её извиваться. Она кричала внутри: я вот-вот обмочусь, а этот глупый старый ублюдок хочет сыграть в двадцать вопросов.
+Когда он приблизился к позиции Эллисон, он увидел её прямо в луче фонаря. Он остановился в нескольких ярдах от того места, где она стояла, пытаясь не позволить отчаянию пописить, заставив её извиваться. Она кричала внутри: я вот-вот обмочусь, а этот глупый старый ублюдок хочет сыграть в двадцать вопросов.
 
 «О, я мог бы знать», — заметил Мэддокс. — Не хочешь объяснить это, Паркер?
 
@@ -246,7 +246,7 @@
 
 К её растущему ужасу, Мэддокс не ушёл. Ей хотелось кричать, чтобы он ушёл, чтобы она могла обмочиться наедине, но не осмеливалась сформулировать эти чувства. Она изо всех сил старалась выглядеть так, как будто контролирует себя, но когда ещё одна струя мочи хлынула ей в трусики, она не смогла подавить вздох, который привлёк внимание Мэддокса. «Что это такое?» — потребовал он со всей чувствительностью нацистского инквизитора.
 
-«Ничего», — ответила Эллисон, не обращая внимания на то, что её голос звучал раздражённо. Она буквально ломала себе шею, чтобы попис*ть, а этот старый пердун слонялся вокруг. Он ждал, что она потеряет контроль?
+«Ничего», — ответила Эллисон, не обращая внимания на то, что её голос звучал раздражённо. Она буквально ломала себе шею, чтобы пописить, а этот старый пердун слонялся вокруг. Он ждал, что она потеряет контроль?
 
 К её крайнему огорчению, Мэддокс направил фонарик на её извивающиеся ноги. Наконец Эллисон огрызнулась под ужасающим напряжением: «Выключи это!»
 
